<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/settingRecycler"
        android:layout_height="match_parent"
        tools:context=".ControlLockScreenFragment" >

        <androidx.appcompat.widget.Toolbar

            android:id="@+id/toolbarControlLock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/toolbarBack"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:titleTextColor="@color/colorNav"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/lock_screen_name" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_settingbackk"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarControlLock">

            <RadioGroup
                android:id="@+id/rd3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <RadioButton
                    android:id="@+id/rdUse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorNav"
                    android:fontFamily="@font/chivo_bold"
                    android:text="@string/use"
                    android:textColor="@color/colorNav"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rdUseSystemDef"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorNav"
                    android:fontFamily="@font/chivo_bold"
                    android:text="@string/use_system_default"
                    android:textColor="@color/colorNav"
                    android:textSize="16sp" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/rd2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <RadioButton
                    android:id="@+id/rdShow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:buttonTint="@color/colorNav"
                    android:fontFamily="@font/chivo_bold"
                    android:text="@string/show"
                    android:textColor="@color/colorNav"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rdHide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorNav"
                    android:fontFamily="@font/chivo_bold"
                    android:text="@string/hide"
                    android:textColor="@color/colorNav"
                    android:textSize="16sp" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:fontFamily="@font/chivo_bold"
                android:text="@string/size"
                android:textColor="@color/colorNav"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/chivo_bold"
                android:text="@string/show_playlist"
                android:textColor="@color/colorNav"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rd1" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/chivo_bold"
                android:text="@string/use_song_picture"
                android:textColor="@color/colorNav"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rd2" />

            <RadioGroup
                android:id="@+id/rd1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <RadioButton
                    android:id="@+id/rdSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorNav"
                    android:fontFamily="@font/chivo_bold"
                    android:text="@string/small"
                    android:textColor="@color/colorNav"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rdMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorNav"
                    android:fontFamily="@font/chivo_bold"
                    android:text="@string/medium"
                    android:textColor="@color/colorNav"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rdLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorNav"
                    android:fontFamily="@font/chivo_bold"
                    android:text="@string/large"
                    android:textColor="@color/colorNav"
                    android:textSize="16sp" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>